--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,8 +1,8 @@
 #
-demo.datasource.master.jdbcUrl=jdbc:mysql://192.168.10.41:3306/gexin_user_nd?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
-demo.datasource.master.username=remote
-demo.datasource.master.password=hangzhoumeiri
+demo.datasource.master.jdbcUrl=jdbc:mysql://127.0.0.1:3306/user_test_1?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
+demo.datasource.master.username=kolor
+demo.datasource.master.password=111111
 #
-demo.datasource.slave.jdbcUrl=jdbc:mysql://192.168.10.41:3306/gexin_user_sina?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
-demo.datasource.slave.username=remote
-demo.datasource.slave.password=hangzhoumeiri
+demo.datasource.slave.jdbcUrl=jdbc:mysql://127.0.0.1:3306/user_test_2?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
+demo.datasource.slave.username=kolor
+demo.datasource.slave.password=111111
